# csv2json

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: python-publish.yml
python_csv2json.egg-info/: PKG-INFO  SOURCES.txt
