[project]
name = "python-csv2json"
version = "0.4.2"
authors = [
  { name="SalTech", email="info@saltech.ir" },
]
description = "CSV to JSON Converter | Export to File and Use as String"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
