[project]
name = "python-csv2json"
version = "0.4.7"
authors = [
  { name="SalTech", email="saltech.co.ir@gmail.com" },
]
description = "CSV to JSON Converter | Export to File and Use as String"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SalTechGroup/csv2json"
"Bug Tracker" = "https://github.com/SalTechGroup/csv2json/issues"
